add hateoas for createGame route
